# rosbag2_cpp_recorder

./: CMakeLists.txt  README.md  package.xml
include/bag_recorder/: futils.hpp  rosbag_recorder.hpp
src/: bag_recorder_node.cpp  bag_recorder_wrapper.cpp  simple_bag_recorder.cpp
src/bag_recorder/: rosbag_recorder.cpp
